Fix small spacing issue.

--- a/app/assets/stylesheets/company_index.scss
+++ b/app/assets/stylesheets/company_index.scss
@@ -46,16 +46,16 @@
             font-size: 12px;
             letter-spacing: 1px;
             opacity: 0.8;
-            width: 200px;
+            width: 195px;
             text-transform: uppercase;
 
             &:first-child {
               padding-left: 30px;
-              width: 260px;
+              width: 275px;
             }
 
             &:last-child {
-              width: 140px;
+              width: 120px;
               padding-left: 18px;
             }
 
